# lol-stats

./: .gitignore  README.md  pyproject.toml
examples/: example.ipynb
src/lol_stats/: __init__.py  logging.py
src/lol_stats/analysis/: __init__.py  _kda_distribution.py  _smurf_detection.py  _utils.py  _win_rate.py
src/lol_stats/data/: __init__.py  _game.py  _summoner.py  _team.py
src/lol_stats/download/: __init__.py  _get_games_of_summoner.py  _get_summoner.py  _query.py  _regions.py
